# mathing-tui

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  justfile
.sqlx/: query-002acc972e1027a19786dcda259547f3b6da1350923d42f7846b8826fa1b770f.json  query-071bd7cd1ca62ae59010ed7cdf6910521bbda38c5b7b803957ac8c437fb30622.json  query-0c7ac1ba9b839bf69a1f052b242ac71e06532e07ca74ac71c3d8595234e83ce8.json  query-0d17808ed9b3c3a56c75ab4c10fa5f416aa2e044e62aec3dd67385c10c1f47c1.json  query-158db40541ce52d31aa50255b5f6637b9cc94b179baad06ca6dc128994248077.json  query-18500b121f3508810fc0d14b15908e9689236b5696d9d8ba6a5b684528485b61.json  query-2c6247378953580602298159512bff50d7dfedba799d1f253ab0b675797e077b.json  query-3339fa06f63caf7569df130f460fc08ddab4cc53fcfb4bde04410ecaf712c64d.json  query-341ffa9d7e11f8bba1d1be5bf11623adddcc98720280ccfcc45d8aa1c01a51c9.json  query-34dc47dbbe89bb05f305cb3d310404e27b27272f733f983522ded6a9bfbde704.json  query-4b4d2d60a033fd4d95355359238b7519b9a64157a1685389c55fe0a1a80c765f.json  query-4d2cbc9164649479cc61968be9ec8a8392a2caa29ca4132864efdaf7a887093f.json  query-52ec05987042276f9e7875eea7058ae1896ec3575b1f57df61b8b486117f2738.json  query-66469b89e5e3f990ee7fb2751ea3b4f98eea700c819e4848881650dcefb46c92.json  query-6c36ca97ca3d73537735879c0affbfbe877734c12f4687db57f98b188cfeb6cf.json  query-6f2a0e05d1cb19eb5713a75c7e36e95f00bbed573162fa981bff00e5592fc130.json  query-7237157017a8ab7b4ded37f65d722c037d4b5ac0f9956adb20d57bcbb66de700.json  query-72e75aede5f15b893affe17b7da35daae96830f5d3fbe542bf04a42cd9f33d70.json  query-7d3f382860439d8eefd4a55b233b12855ea30596b8d1f0e49ee778f834fc958a.json  query-8644f203d5fa3f0ead87e53bd9df21ca55f9b2eca2210612197991de9e9cdc46.json  (+23 more)
sql/: init.sql  (+5 more)
(+245 files in other folders)
