[package]
name = "mathing-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = "0.15.11"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
rust_decimal = { version = "1.37.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
temp-env = "0.3.6"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
